syntax = "proto3";
package user;
option java_multiple_files=true;
option java_package="com.acheron.user";
option java_outer_classname="UserServiceProto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";



service UserServiceGrpc{

  rpc saveUser(UserRequest) returns (google.protobuf.Empty);

  rpc findUserByEmail(Email) returns (UserDto);

  rpc findUserByUsername(Username) returns (UserDto);

  rpc existsByEmail(Email) returns (Bool);


}

message UserRequest {
  string username = 1;
  google.protobuf.StringValue password = 2;
  string email = 3;
  string display_name = 4;
  string image = 5;
  bool is_email_verified = 6;
  string role = 7;
  string auth_method = 8;
}
message UserDto {
  int64 id = 10;
  string username = 1;
  google.protobuf.StringValue password = 2;
  string email = 3;
  string display_name = 4;
  string image = 5;
  bool is_email_verified = 6;
  string role = 7;
  string auth_method = 8;
}

message Username {
  string username = 1;
}
message Email {
  string email = 1;
}
message Bool {
  bool isExisting = 1;
}